# libpsinc

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Earthfile  LICENSE  README.md  compile_flags.txt  iconograph.pro  lib  libpsinc.sln  libpsinc.sublime-project  premake5.lua
.forgejo/workflows/: build.yml  check.yml
.github/workflows/: main.yml  sync.yml
cpp/: .gitignore  iconograph-qt.pro  libpsinc.sublime-project  premake4.lua  premake5.lua  strip
cpp/include/iconograph-qt/: mainwindow.h
cpp/include/psinc/: Camera.h  Instrument.h
cpp/include/psinc/driver/: Commands.h  Device.h  Feature.h  Register.h
cpp/include/psinc/handlers/: DataHandler.h  ImageHandler.h  NoopHandler.h
cpp/include/psinc/transport/: Transport.h  TransportHotplug.h  UsbTransport.h
cpp/include/psinc/xml/: Devices.h
cpp/src/iconograph/: Iconograph.cpp
cpp/src/iconograph-qt/: mainwindow.cpp  settingsmodel.cpp
cpp/src/psinc/: Camera.cpp  Instrument.cpp
cpp/src/psinc/driver/: Device.cpp  Feature.cpp  Register.cpp
cpp/src/psinc/handlers/: DataHandler.cpp  ImageHandler.cpp
cpp/src/psinc/transport/: Transport.cpp  TransportHotplug.cpp
cpp/src/psinc/xml/: v024.cpp
cpp/ui/: mainwindow.ui
cs/: libpsinc.nuspec  libpsinc.sln
cs/example/: iconograph.csproj
cs/example/iconograph/: iconograph.csproj
cs/example/src/: GtkImageHandler.cs  Iconograph.cs  XwtImageHandler.cs
cs/libpsinc/: libpsinc.csproj
cs/libpsinc/Properties/: AssemblyInfo.cs
cs/libpsinc/src/: Acquirer.cs  Camera.cs
cs/libpsinc/src/Common/: AliasCollection.cs  Bayer.cs  ImageHandler.cs  Structures.cs
cs/libpsinc/src/Driver/: Camera.cs  Commands.cs  Device.cs  (+2 more)
cs/libpsinc/xml/: asc_v024.xml
iconograph/: CMakeLists.txt  iconograph.pro  iconograph.pro.shared
iconograph/src/: canvas.cpp  mainwindow.cpp
include/: psinc.h
include/flasc/: bootstrap.hpp  flasc.hpp
include/iconograph/: canvas.h  mainwindow.h  settingsmodel.h
include/psinc/: Camera.h  Instrument.h  Properties.hpp  Psinc.h  Transport.h  TransportBuffer.hpp
include/psinc/driver/: Aliases.h  Commands.h  Device.h  Feature.h  Register.h
include/psinc/flash/: Flash.hpp  HPFC.hpp
include/psinc/handlers/: DataHandler.h  DataHandler.hpp  Decoder.hpp  ImageHandler.h  ImageHandler.hpp  NoopHandler.h  NoopHandler.hpp
include/psinc/xml/: Devices.h
resources/: iconograph.qrc
src/examples/: build.sh  capture-images.cpp  capture-windowed.cpp  connect-to-specific-camera.cpp  control-flash.cpp  master-slave.cpp  query-camera.cpp  write-to-device.cpp  write-to-register.cpp
src/flasc/: flasc.cpp
src/iconograph/: canvas.cpp  main.cpp  mainwindow.cpp
src/psinc/: Camera.cpp  Instrument.cpp  Psinc.cpp  Transport.cpp
src/psinc-c/: device.cpp  image.cpp  psinc.cpp
src/psinc-cs/: AssemblyInfo.cs  Camera.cs  Image.cs  libpsinc.csproj
src/psinc-loopback/: build.sh  convert.sh  psinc-loopback.cpp
src/psinc/driver/: Device.cpp  Feature.cpp  Register.cpp
src/psinc/xml/: mt9.cpp  v024.cpp
ui/: mainwindow.ui
(+14 files in other folders)
